* Release 2.3.2

Added support for UDP source address spoofing when run in "transparent" mode.
This makes source to target UDP traffic "transparent" but the target server
will be unlikely to be able to reply to any such datagrams received. Note that
this is not compiled in by default and requires the use of the "libnet"
library.

Added "readtimeout" to allow some defence against denial of service attacks.
If set to non-zero then remote data reads must be completed within this number
of seconds. This primarily affects the Zebedee protocol exchanges, idle
connection timeouts are handled through "idletimeout".

Added "no linger" and "keep alive" options to sockets accepted by client
or server in order to clean up better in the case of the peer hanging.

Prohibit the default target from having an address mask. It's too confusing
otherwise!

Fix handling of TCP connections in mixed mode.

Improved some comments in the code.

Fix short writes that show up on OpenBSD (thanks to Jon Leonard for this).

Revised the example config files to make them more secure by default and to
use more modern constructs.

* Release 2.3.1 (2002/03/15)

Changed any potentially unsafe sprintf/vsprintf instances to
snprintf/vsnprintf. There should never have been a remote exploit possible,
this just eliminates any theoretical local ones in case someone has a reason
to run this as root ... (Note that use of these functions may be an issue
on some platforms although they do appear in the UNIX98 spec and exist
on Windows).

Allowed CIDR address specifications for target (and server name in listenmode).

Added IP address checking with the "checkaddress" keyword.

Finally caved in and added "httpproxy" to allow connection via a web proxy
server using "CONNECT".

Added "transparent" keyword to attempt to act as a transparent proxy and
forward on the client IP address. It may work on Linux 2.0/2.2. But then
again, it might not ...

* Release 2.3.0 (2002/03/07)

New functionality (at last!).
